# MyPersonalShelf

./: .gitignore  README.ko.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/superpowers/plans/: 2026-07-13-dashboard-pins.md
docs/superpowers/specs/: 2026-07-13-dashboard-pins-design.md
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  reader.json
src-tauri/src/: lib.rs  main.rs
src/components/: AddContentModal.test.tsx  AddContentModal.tsx  DocumentTextView.tsx  GuidePanel.tsx  MediaViewerView.tsx  ReaderView.tsx  SettingsPanel.tsx
src/hooks/: useDialogFocus.ts
src/lib/: appConfig.ts  appSettings.test.ts  appSettings.ts  bookmarkImport.test.ts  bookmarkImport.ts  dashboardLayouts.test.ts  dashboardLayouts.ts  documentOpen.test.ts  documentOpen.ts  duplicates.test.ts  duplicates.ts  i18n.ts  itemOperations.test.ts  itemOperations.ts  linkMeta.test.ts  linkMeta.ts  native.ts  nativeIds.test.ts  nativeIds.ts  nativeShelfQueue.test.ts  nativeShelfQueue.ts  persistence.test.ts  persistence.ts  quickCapture.test.ts  quickCapture.ts  sampleData.ts  search.test.ts  search.ts  shelfDisplay.ts  shelfImport.test.ts  shelfImport.ts  theme.test.ts  theme.ts  urlSafety.test.ts  urlSafety.ts
