[package]
name = "my-personal-shelf"
version = "0.1.0"
description = "A local-first personal content shelf"
authors = ["MyPersonalShelf"]
edition = "2021"

[lib]
name = "my_personal_shelf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
url = "2"
encoding_rs = "0.8"
http-range = "0.1"
mime_guess = "2"
percent-encoding = "2"
